Added versioning for the Task and updated the Swagger specificaton.
