# backend/pyor/models.py
@@ -14,6 +14,8 @@ connect(os.environ["MONGO_DBNAME"], host=os.environ["MONGO_HOST"], port=int(os.e
 LAST_UPDATED = "_updated"
 DATE_CREATED = "_created"
 ETAG = "_etag"
+VERSION = "_version"
+LATEST_VERSION = "_latest_version"
 
 class FileSource(Document):
     filename = StringField(required=True)
@@ -62,6 +64,8 @@ class Task(Document):
     script_file = ReferenceField(TaskFile, required=True)
     auxiliar_files = ListField(ReferenceField(TaskFile))
     param_definitions = ListField(EmbeddedDocumentField(ParamDefinition))
+    _version = IntField(api_autogenerated=True)
+    _latest_version = IntField(api_autogenerated=True)
 
     @property
     def dirpath(self):
